--- a/home-page.html
+++ b/home-page.html
@@ -7,40 +7,42 @@
     <link rel="icon" type="image/png" href="img/icon.png">
     <title>Grow With Grades - Teach-Bot</title>
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/utill.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/contact.css">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
+
         .slider {
             margin: 50px auto;
             background-color: gray;
-            border: 2px black solid;
+            /* border: 2px black solid; */
             width: 80%;
             height: 450px;
             border-radius: 10px;
         }
-        .slider .image{
-            position: relative;
-            display: inline-block;
-            height: 100%;
-            width: 100%;
-        }
-        img{
+
+        img {
             border-radius: 10px;
             height: 100%;
             width: 100%;
         }
-        button{
+
+        button {
             position: absolute;
             top: 50%;
             /* z-index: 1; */
             cursor: pointer;
         }
-        .hide{
+
+        .hide {
             display: none;
         }
-        .show{
+
+        .show {
             display: block;
         }
     </style>
@@ -51,11 +53,21 @@
         <section>
             <div class="slider">
                 <div class="image">
-                    <!-- <button>left</button> -->
-                    <img src="img/Question-page.png" alt="img3">
-                    <!-- <img src="img/24701-nature-natural-beauty.jpg" alt="img1">
-                    <img src="img/istockphoto-517188688-612x612.jpg" alt="img2"> -->
-                    <!-- <button>right</button> -->
+                    <main>
+                        <section>
+                            <div class="container">
+                                <div class="textSlid">
+                                    <mARquee>
+                                        <font size="8">
+                                            <B>Welcome to Grow With Grades</B>
+                                        </font>
+                                    </mARquee>
+                                </div>
+                                <div class="bgimg">
+                                </div>
+                            </div>
+                        </section>
+                    </main>
                 </div>
             </div>
         </section>
