--- a/teach-bot.html
+++ b/teach-bot.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="wel">Welcome to your dashboard!</div>
+        <div class="wel">Welcome to our dashboard!</div>
     </header>
     <main>
         <div class="container">
